feat: [CDS-47361]: fix Code smells in PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew (#41254)
* feat: [CDS-47361]: fix Code smells in PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew

* feat: [CDS-47361]: Extract out more constants

* feat: [CDS-47361]: Code format

* feat: [CDS-47361]: Make PlanExecutionSummaryCDConstants package local

* feat: [CDS-47361]: Combine hardcoded stringBuilder Append

* feat: [CDS-47361]: Change field name to stageExecutionNode